<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Effie</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio_text">Hi, my name is Effie.
                \n\nI love <b>fish</b>.
                \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
                \nFun fact is that I have several aquariums and also a river.
                \n\nI like <i>eating fish</i>, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
                \nAnd sometimes I even go fishing.
                \nAnd even less sometimes, I actually catch something.
                \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
                \n\nI\'ll be happy to teach you how to make your own aquarium.
                \nYou should ask someone else about fishing, though.\n\n
                \n\nI love <b>fish</b>.
                \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
                \nFun fact is that I have several aquariums and also a river.
                \n\nI like <i>eating fish</i>, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
                \nAnd sometimes I even go fishing.
                \nAnd even less sometimes, I actually catch something.
                \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
                \n\nI\'ll be happy to teach you how to make your own aquarium.
                \nYou should ask someone else about fishing, though.\n\n
    </string>
    <string name="sunset_image">Sunset Image</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>