<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        style="@style/NameStyle" />

    <EditText
        android:id="@+id/nickname_edit"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/what_is_your_nickname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/amaranth"
        android:text="@string/done" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/star_image0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin_small"
            android:layout_marginRight="@dimen/layout_margin_small"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/yellow_star" />
        <ImageView
            android:id="@+id/star_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin_small"
            android:layout_marginRight="@dimen/layout_margin_small"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/yellow_star" />
        <ImageView
            android:id="@+id/star_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin_small"
            android:layout_marginRight="@dimen/layout_margin_small"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/yellow_star" />
        <ImageView
            android:id="@+id/star_image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin_small"
            android:layout_marginRight="@dimen/layout_margin_small"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/yellow_star" />
        <ImageView
            android:id="@+id/star_image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin_small"
            android:layout_marginRight="@dimen/layout_margin_small"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/yellow_star" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bg_sunset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                app:srcCompat="@drawable/image1"
                android:contentDescription="@string/sunset_image" />

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="@dimen/layout_padding"
                android:paddingLeft="@dimen/layout_padding"
                android:paddingTop="@dimen/layout_padding"
                android:text="@string/bio_text" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>